feat: Refactorización masiva de código y corrección de 15 vulnerabilidades de seguridad
CAMBIOS PRINCIPALES:

1. SEGURIDAD - Actualización Spring Boot 3.5.4 → 3.5.5
   - Corrige 9 CVEs críticos incluyendo:
   - CVE-2025-55754 (Tomcat RCE - CRÍTICO 9.6)
   - CVE-2025-41248 (Spring Security bypass - ALTO 7.5)
   - CVE-2025-41249 (Spring Core - ALTO 7.5)
   - 6 CVEs adicionales en Tomcat, Logback, Jakarta Mail

2. SEGURIDAD - Mitigación CVE-2025-10492 JasperReports (CRÍTICO 9.8)
   - Creado JasperReportsSecurityAspect.java con validaciones automáticas
   - Whitelist de plantillas JRXML aprobadas
   - Validación estricta de parámetros de reporte
   - Auditoría completa de compilaciones
   - SIN PARCHE OFICIAL - Mitigaciones compensatorias implementadas

3. REFACTORIZACIÓN - Eliminación de código redundante
   - Eliminadas inicializaciones redundantes (mensaje = "", processed = 0, etc.)
   - Simplificadas expresiones Stream API (.collect(Collectors.toList()) → .toList())
   - Extraídos 15+ métodos helper para eliminar duplicación (~150 líneas eliminadas)

4. MEJORES PRÁCTICAS - Constructor Injection
   - Migrados InventoryController y MultiWarehouseController de Field a Constructor Injection
   - Eliminados campos @Autowired, agregados constructores con dependencias final

5. APIS MODERNAS - Java 11+
   - Reemplazado role.trim().isEmpty() por role.isBlank()
   - Usados method references en lugar de lambdas (GrantedAuthority::getAuthority)
   - Cambiado .anyMatch() negado por .noneMatch()

6. EXTRACCIÓN DE MÉTODOS (Extract Method Refactoring)
   Archivos refactorizados:
   - LabelsPersistenceAdapter.java - validateLabelsForPrinting()
   - ImageServiceImpl.java - generateDefaultName()
   - AdminUserController.java - mapToUserRequest()
   - UserController.java - mapToUserDomainResponse()
   - UserCompleteController.java - buildPersonalInfoData()
   - RequestRecoveryPasswordService.java - validateUserAndRole()

7. CORRECCIONES DE BUGS
   - RequestRecoveryPasswordController: 